<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">M8APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TextLogin">Welcome</string>
    <string name="TextName">Email</string>
    <string name="TextPassword">Password</string>

    <string name="btnLogin">Login</string>
    <string name="checkBox">Remember me</string>

    <string name="buttonEspañol">Spanish</string>
    <string name="buttonCatala">Catalan</string>
    <string name="buttonIngles">English</string>
    <string name="buttonBorrar">Log out</string>

    <string name="TVName">Name of God</string>
    <string name="TVPantheon">Pantheon</string>
    <string name="TVRol">Role</string>
    <string name="TVRango">Rank</string>
    <string name="TVDaño">Damage</string>
    <string name="btnAñadir">Add</string>
    <string name="btnEliminar">Remove</string>

    <string name="Crear_Dios">Create god</string>
    <string name="MensajeConfirmacionCrear">Are you sure you want to create this gods?</string>
    <string name="SiCrear">Yes</string>
    <string name="NoCrear">No</string>
    <string name="CorrectoMensajeCrear">Successfully added</string>

    <string name="Eliminar_Dios">Erase all gods</string>
    <string name="MensajeConfirmacionEliminar">Are you sure you want to erase all the gods?</string>
    <string name="SiEliminar">Yes</string>
    <string name="NoEliminar">No</string>
    <string name="CorrectoMensajeElinimar">Successfully removed</string>

    <!--SpinnerPantheon-->
    <string name="Chinese">Chinese</string>
    <string name="Egyptian">Egyptian</string>
    <string name="Big_Old">Big Old</string>
    <string name="Greek">Greek</string>
    <string name="Hindu">Hindu</string>
    <string name="Japanese">Japanese</string>
    <string name="Nordic">Nordic</string>
    <string name="Roman">Roman</string>

    <!--SpinnerRol-->
    <string name="Warrior">Warrior</string>
    <string name="Assassin">Assassin</string>
    <string name="Mage">Mage</string>
    <string name="Guardian">Guardian</string>
    <string name="Hunter">Hunter</string>
    <!--SpinnerRango-->
    <string name="Melee">Melee</string>
    <string name="Ranged">Ranged</string>
    <!--SpinnerDaño-->
    <string name="Physical">Physical</string>
    <string name="Magical">Magical</string>

    <!--Spinner-->
    <string-array name="SpinnerPantheon">
        <item>Arthurian</item>
        <item>Babilonia</item>
        <item>Celtic</item>
        <item>@string/Chinese</item>
        <item>@string/Egyptian</item>
        <item>@string/Big_Old</item>
        <item>@string/Greek</item>
        <item>@string/Hindu</item>
        <item>@string/Japanese</item>
        <item>Maya</item>
        <item>@string/Nordic</item>
        <item>Polynesian</item>
        <item>@string/Roman</item>
        <item>Slavic</item>
        <item>Voodoo</item>
        <item>Yoruba</item>
    </string-array>
    <string-array name="SpinnerRol">
        <item>@string/Warrior</item>
        <item>@string/Assassin</item>
        <item>@string/Mage</item>
        <item>@string/Guardian</item>
        <item>@string/Hunter</item>
    </string-array>
    <string-array name="SpinnerRango">
        <item>@string/Melee</item>
        <item>@string/Ranged</item>
    </string-array>
    <string-array name="SpinnerDaño">
        <item>@string/Physical</item>
        <item>@string/Magical</item>
    </string-array>
</resources>